--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,14 @@
 
-/* 
-
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+.clockBody {
+    background-color: black;
+    text-align: center;
+}
+.clockBody div{
+    display: inline-block;
+    font-size: 10vh;
+    line-height: 20vh;
+    background: black;
+    color: white;
+    padding: 30px;
+    margin: 3px;
+}
